fixed navbar icons on small screens

--- a/client/src/components/navbar/navbar-sm/_navbar-sm.scss
+++ b/client/src/components/navbar/navbar-sm/_navbar-sm.scss
@@ -74,3 +74,18 @@
     display: flex;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .navbarsm {
+    .navbarsm__left {
+      .navbarsm__left-search {
+        display: none;
+      }
+    }
+    .navbarsm__right {
+      .navbarsm__right-account {
+        display: none;
+      }
+    }
+  }
+}
