--- a/client/src/pages/product-listing/product-listing.scss
+++ b/client/src/pages/product-listing/product-listing.scss
@@ -133,7 +133,7 @@
   width: 100vw;
   min-width: 300px;
   background-color: var(--color-offwhite);
-  padding: 5rem 0;
+  padding: 5rem 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
